--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gl",
-  "main": "expo-router/entry",
+  "main": "",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -18,7 +18,8 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
     "expo": "~52.0.18",
     "expo-blur": "~14.0.1",
@@ -26,7 +27,7 @@
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
-    "expo-router": "4.0.11",
+    "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
